CH05 geïmplementeerd