@@ -17,50 +17,75 @@ public class Checker {
 
     public void check(AST ast) {
         variableTypes = new LinkedList<>();
-
-//        checkCH01(ast);
         variableTypes.add(new HashMap<>());
+
         for (ASTNode node :
                 ast.root.getChildren()) {
-            checkCH01(node);
+            checkCH01FindAssignment(node);
+//            checkCH01FindReference(node);
             checkCH03(node);
+            checkCH04(node);
+            checkCH05(node);
         }
     }
 
-    private void checkCH01(ASTNode node) {
+    private void checkCH01FindAssignment(ASTNode node) {
         if (node.getChildren().size() != 1) {
             if (node instanceof VariableAssignment) {
-                variableTypes.getFirst().put(((VariableAssignment) node).name.name, expressionTypeResolver(((VariableAssignment) node).expression));
-            } else if (node instanceof Declaration) {
-                if (((Declaration) node).expression instanceof VariableReference
-                        && !variableTypes.getFirst().containsKey(((VariableReference) ((Declaration) node).expression).name)) {
-                    node.setError(String.format("Variable \'%s\' is not yet defined.", ((VariableReference) ((Declaration) node).expression).name));
+                variableTypes.get(0).put(((VariableAssignment) node).name.name, expressionTypeResolver(((VariableAssignment) node).expression));
+            } else if (node instanceof VariableReference) {
+                if (!variableTypes.get(0).containsKey(((VariableReference) node).name)) {
+                    node.setError(String.format("Variable \'%s\' is not yet defined.", ((VariableReference) node).name));
                 }
             }
-
-            node.getChildren().forEach(this::checkCH01);
+            node.getChildren().forEach(this::checkCH01FindAssignment);
         }
     }
 
-    private void checkCH02(ASTNode node) {
-        if (node.getChildren().size() == 1) return;
-
-        if (node instanceof Operation) {
-            if (expressionTypeResolver(((Operation) node).lhs) != expressionTypeResolver(((Operation) node).rhs)) {
-                node.setError("Operands must be of same type");
-            }
-        }
-    }
+//    private void checkCH01FindReference(ASTNode node) {
+//        if (node.getChildren().size() != 1) {
+//            if (node instanceof VariableReference) {
+//                if (!variableTypes.get(0).containsKey(((VariableReference) node).name)) {
+//                    node.setError(String.format("Variable \'%s\' is not yet defined.", ((VariableReference) node).name));
+//                }
+//            }
+//            node.getChildren().forEach(this::checkCH01FindReference);
+//        }
+//    }
 
     private void checkCH03(ASTNode node) {
         if (node.getChildren().size() != 1) {
             if (node instanceof Operation) {
                 if (((Operation) node).lhs instanceof ColorLiteral || ((Operation) node).rhs instanceof ColorLiteral) {
-                    node.setError(String.format("An operand cannot be of type: Color"));
+                    node.setError("An operand cannot be of type: Color");
+                }
+            }
+            node.getChildren().forEach(this::checkCH03);
+        }
+    }
+
+    private void checkCH04(ASTNode node) {
+        if (node.getChildren().size() != 1) {
+
+            node.getChildren().forEach(this::checkCH04);
+        }
+    }
+
+    private void checkCH05(ASTNode node) {
+        if (node.getChildren().size() != 1) {
+            if (node instanceof IfClause) {
+                if (((IfClause) node).conditionalExpression instanceof VariableReference) {
+                    if (variableTypes.get(0).get(((VariableReference) ((IfClause) node).conditionalExpression).name) != ExpressionType.BOOL) {
+                        node.setError("If condition must be of type boolean");
+                    }
+                } else {
+                    if (expressionTypeResolver(((IfClause) node).conditionalExpression) != ExpressionType.BOOL) {
+                        node.setError("If condition must be of type boolean");
+                    }
                 }
             }
 
-            node.getChildren().forEach(this::checkCH03);
+            node.getChildren().forEach(this::checkCH05);
         }
     }
 
